--- a/index.html
+++ b/index.html
@@ -11,24 +11,20 @@
     <div id="card">
         <div id="card-inside">
             <div class="wrap">
-                <p>Hey son,</p>
-                <p>I lost the message inside the card 2 times.. and i realsied i am slow at this :'( </p>
-                <p>Listen kid, I want you to be the happiest today.. and i suck at making people happy..This is probably
-                    the
-                    only gift i can give you, my word..</p>
-                <p>I will be there with you in your heart and soul whenever you seek me.
-                    I love you.
-                </p>
-                <p>always.</p>
-                <p><a href="http://pandey47.0fees.us/index4.html">NEXT</a></p>
-                <p class="signed">ZEF</p>
-
+                <p>Hello My Lovely Emmeline!!</p>
+                <p>I am writing this on the bus on the way home.</p>
+                <p>First, congrates for you 25th birthday and I am glad I can be with you on your birthday</p>
+                <p>I will be with you every birthday of yours :)</p>
+                <p>Sometimes I still can not belive I have a wonderful wife like you. I think I am really lucky.</p>
+                <p>Let's make wonderful moments this year together.</p>
+                <p>Happy birthday one more time, and I love you!</p>
+                <p class="signed">Jiwan</p>
             </div>
         </div>
 
         <div id="card-front">
             <div class="wrap">
-                <h1>Happy Birthday!</h1>
+                <h1>Dear My Lovely Wife!</h1>
             </div>
             <button id="open">&gt;</button>
             <button id="close">&lt;</button>
@@ -236,33 +232,33 @@
 
 <script>
     (function () {
-            function $(id) {
-                return document.getElementById(id);
-            }
+        function $(id) {
+            return document.getElementById(id);
+        }
 
-            var card = $('card'),
-                openB = $('open'),
-                closeB = $('close'),
+        var card = $('card'),
+            openB = $('open'),
+            closeB = $('close'),
+            timer = null;
+        console.log('wat', card);
+        openB.addEventListener('click', function () {
+            card.setAttribute('class', 'open-half');
+            if (timer) clearTimeout(timer);
+            timer = setTimeout(function () {
+                card.setAttribute('class', 'open-fully');
                 timer = null;
-            console.log('wat', card);
-            openB.addEventListener('click', function () {
-                card.setAttribute('class', 'open-half');
-                if (timer) clearTimeout(timer);
-                timer = setTimeout(function () {
-                    card.setAttribute('class', 'open-fully');
-                    timer = null;
-                }, 1000);
-            });
+            }, 1000);
+        });
 
-            closeB.addEventListener('click', function () {
-                card.setAttribute('class', 'close-half');
-                if (timer) clearTimerout(timer);
-                timer = setTimeout(function () {
-                    card.setAttribute('class', '');
-                    timer = null;
-                }, 1000);
-            });
+        closeB.addEventListener('click', function () {
+            card.setAttribute('class', 'close-half');
+            if (timer) clearTimerout(timer);
+            timer = setTimeout(function () {
+                card.setAttribute('class', '');
+                timer = null;
+            }, 1000);
+        });
 
-        }());
+    }());
 
 </script>
